# agar-io-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/agarbot/: __init__.py  main.py  utils.py
src/agarbot/models/: tflite_ensemble.py
