[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/agarbot"]
[project]
name="agarbot"
version="0.0.1"
dependencies=[
    "pyautogui",
    "Pillow",
    "numpy",
    "pandas",
    "tensorflow",
    "opencv-python",
]
[project.scripts]
agarbot="agarbot.main:main_cli"